--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/academic"]
-	path = themes/academic
-	url = https://github.com/gcushen/hugo-academic.git
+[submodule "themes/simple-style"]
+	path = themes/simple-style
+	url = git@github.com:yanlinlin82/simple-style.git
