--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/hugo-theme-even"]
 	path = themes/hugo-theme-even
-	url = git@github.com:olOwOlo/hugo-theme-even.git
+	url = https://github.com/olOwOlo/hugo-theme-even.git
